Define User Profile Entity, Seed User Profile Theme Data, Load Resume View 	based on profile config, Enumerate Themes, Exempt H2 Console from 	Spring Security Authentication, it's managed by H2 on it's own

--- a/src/main/resources/templates/profile-templates/modern/index.html
+++ b/src/main/resources/templates/profile-templates/modern/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>Joe Bloggs - Curriculum Vitae</title>
 
@@ -7,7 +7,7 @@
 <meta name="description" content="The Curriculum Vitae of Joe Bloggs."/>
 <meta charset="UTF-8"> 
 
-<link type="text/css" rel="stylesheet" href="../profile-templates/1/style.css">
+<link type="text/css" rel="stylesheet" href="../profile-templates/modern/style.css">
 <link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700|Lato:400,300' rel='stylesheet' type='text/css'>
 
 <!--[if lt IE 9]>
@@ -18,7 +18,7 @@
 <div id="cv" class="instaFade">
 	<div class="mainDetails">
 		<div id="headshot" class="quickFade">
-			<img src="../profile-templates/1/headshot.jpg" alt="Alan Smith" />
+			<img src="../profile-templates/modern/headshot.jpg" alt="Alan Smith" />
 		</div>
 		
 		<div id="name">
@@ -44,7 +44,7 @@
 				</div>
 				
 				<div class="sectionContent">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dolor metus, interdum at scelerisque in, porta at lacus. Maecenas dapibus luctus cursus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<p th:text = "${userProfile.resumeSummary}">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dolor metus, interdum at scelerisque in, porta at lacus. Maecenas dapibus luctus cursus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
 				</div>
 			</article>
 			<div class="clear"></div>
