--- a/src/main/resources/templates/profile-templates/minimal/index.html
+++ b/src/main/resources/templates/profile-templates/minimal/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 
 	<title>Jonathan Doe | Web Designer, Director | name@yourdomain.com</title>
@@ -9,7 +9,7 @@
 	<meta name="description" content="" />
 
 	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css" media="all" /> 
-	<link rel="stylesheet" type="text/css" href="../profile-templates/3/resume.css" media="all" />
+	<link rel="stylesheet" type="text/css" href="../profile-templates/minimal/resume.css" media="all" />
 
 </head>
 <body>
@@ -43,7 +43,7 @@
 							<h2>Profile</h2>
 						</div>
 						<div class="yui-u">
-							<p class="enlarge">
+							<p class="enlarge" th:text = "${userProfile.resumeSummary}">
 								Progressively evolve cross-platform ideas before impactful infomediaries. Energistically visualize tactical initiatives before cross-media catalysts for change. 
 							</p>
 						</div>
